# ExcelToDB_DRF

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/lookup/: admin.py  models.py  serializers.py  urls.py  views.py
apps/lookup/migrations/: 0001_initial.py  0002_rename_materials_material.py  0003_alter_category_code_alter_material_cat_and_more.py
apps/lookup/services/: import_xls.py
apps/lookup/tests/: test_api.py  test_models.py  test_serializers.py
home/: settings.py  urls.py
nginx/: default.conf
